--- a/cloud-api-commons/pom.xml
+++ b/cloud-api-commons/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.atguigu</groupId>
+        <groupId>com.atguigu.cloud</groupId>
         <artifactId>mscloudV5</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -20,6 +20,11 @@
     </properties>
 
     <dependencies>
+        <!--openfeign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <!--SpringBoot通用依赖模块-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
